<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/CoinsTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/GOLDRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/GOLDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/PENYRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/PENYText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/DOLRRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/DOLRText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/SHILRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/SHILText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/QUIDRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/QUIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/exchangeCryptoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/CoinsTable"
        app:layout_constraintEnd_toEndOf="@+id/CoinsTable"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/CoinsTable"
        app:srcCompat="@drawable/ic_exchange_crypto" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/giftCryptoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/exchangeCryptoBtn"
        app:layout_constraintEnd_toEndOf="@+id/CoinsTable"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/CoinsTable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_gift_coin" />

</android.support.constraint.ConstraintLayout>